Añadimos todos los diagramas y el codigo final con pruebas

--- a/entregable.ipynb
+++ b/entregable.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,12 +31,13 @@
     "        self._asociados = []\n",
     "        self._titulares = []\n",
     "        self._investigadores = []\n",
-    "\n",
+    "### DAR DE ALTA PERSONAS\n",
     "    def añadir_estudiante(self, nombre, DNI, direccion, sexo):\n",
     "        for e in self._estudiantes:\n",
     "            if e.DNI == DNI:\n",
     "                print('Este alumno ya esta dado de alta.')\n",
     "                return\n",
+    "\n",
     "        self._estudiantes.append(Estudiante(nombre, DNI, direccion, sexo))\n",
     "    \n",
     "    def añadir_profesor_asociado(self, nombre, DNI, direccion, sexo, departamento):\n",
@@ -51,20 +52,94 @@
     "            if t.DNI == DNI:\n",
     "                print('Este profesor ya esta dado de alta.')\n",
     "                return\n",
-    "        self._titulares.append(Profesor_titular(nombre, DNI, direccion, sexo, departamento, area_investigacion))    \n",
-    "    \n",
+    "        self._titulares.append(Profesor_titular(nombre, DNI, direccion, sexo, departamento, area_investigacion))  \n",
+    "        self._investigadores.append(Investigador(nombre, DNI, direccion, sexo, departamento, area_investigacion))\n",
+    "\n",
+    "    def añadir_investigador(self, nombre, DNI, direccion, sexo, departamento, area_investigacion):\n",
+    "        for i in self._investigadores:\n",
+    "            if i.DNI == DNI:\n",
+    "                print('Este investigador ya esta dado de alta.')\n",
+    "                return\n",
+    "        self._investigadores.append(Investigador(nombre, DNI, direccion, sexo, departamento, area_investigacion))\n",
+    "### ELIMINAR PERSONAS\n",
     "    def eliminar_estudiante(self, DNI):\n",
     "        for i in range(len(self._estudiantes)):\n",
     "            if self._estudiantes[i].DNI == DNI:\n",
     "                self._estudiantes.pop(i)\n",
     "                print('El estudiante ha sido borrado.')\n",
+    "                return\n",
+    "        print('El DNI no corresponde con ningún estudiante matriculado.')\n",
     "\n",
+    "    def eliminar_asociado(self, DNI):\n",
+    "        for i in range(len(self._asociados)):\n",
+    "            if self._asociados[i].DNI == DNI:\n",
+    "                self._asociados.pop(i)\n",
+    "                print('El profesor asociado ha sido eliminado.')\n",
+    "                return\n",
+    "        print('El DNI no corresponde con ningún profesor asociado.')\n",
+    "    def eliminar_titular(self, DNI):\n",
+    "        for i in range(len(self._titulares)):\n",
+    "            if self._titulares[i].DNI == DNI:\n",
+    "                self._titulares.pop(i)\n",
+    "                print('El profesor titular ha sido eliminado.')\n",
+    "                return\n",
+    "        print('El DNI no corresponde con ningún profesor titular.')     \n",
+    "\n",
+    "    def eliminar_investigador(self, DNI):\n",
+    "        for i in self._investigadores:\n",
+    "            if i.DNI == DNI:\n",
+    "                self._investigadores.remove(i)\n",
+    "                for t in self._titulares:\n",
+    "                    if t.DNI == DNI:\n",
+    "                        self._titulares.remove(t)\n",
+    "                        print('El investigador ha sido eliminado tanto como investigador como profesor titular.')\n",
+    "                        return\n",
+    "                print('El investigador ha sido eliminado.')\n",
+    "                return\n",
+    "        print('El DNI no corresponde con ningún investigador.')\n",
+    "### LISTAR PERSONAS\n",
     "    def listar_estudiantes(self):\n",
     "        print('LISTADO ESTUDIANTES')\n",
     "        for e in self._estudiantes:\n",
     "            print('\\t', e.devolver_datos())\n",
     "\n",
-    "    def añadir_asignatura(self, profesor, asignatura):\n",
+    "    def listar_asociados(self):\n",
+    "        print('LISTADO ASOCIADOS')\n",
+    "        for a in self._asociados:\n",
+    "            print('\\t', a.devolver_datos())\n",
+    "\n",
+    "    def listar_titulares(self):\n",
+    "        print('LISTADO TITULARES')\n",
+    "        for t in self._titulares:\n",
+    "            print('\\t', t.devolver_datos())\n",
+    "\n",
+    "    def listar_investigadores(self):\n",
+    "        print('LISTADO INVESTIGADORES')\n",
+    "        for i in self._investigadores:\n",
+    "            print('\\t', i.devolver_datos())\n",
+    "### ASIGNATURAS MATRICULADAS\n",
+    "    def añadir_asignatura_matriculada(self, estudiante, asignatura):\n",
+    "        for e in self._estudiantes:\n",
+    "            if e.DNI == estudiante:\n",
+    "                e.añadir_asignatura(asignatura)\n",
+    "                return\n",
+    "        print('Este DNI no corresponde a ningun estudiante.')\n",
+    "\n",
+    "    def eliminar_asignatura_matriculada(self, estudiante, asignatura):\n",
+    "        for e in self._estudiantes:\n",
+    "            if e.DNI == estudiante:\n",
+    "                e.eliminar_asignatura(asignatura)\n",
+    "                return\n",
+    "        print('Este DNI no corresponde a ningun estudiante.')\n",
+    "    \n",
+    "    def listar_asignaturas_matriculadas(self, estudiante):\n",
+    "        for e in self._estudiantes:\n",
+    "            if e.DNI == estudiante:\n",
+    "                e.listar_asignaturas()\n",
+    "                return\n",
+    "        print('Este DNI no corresponde a ningun estudiante.') \n",
+    "### ASIGNATURAS IMPARTIDAS\n",
+    "    def añadir_asignatura_impartida(self, profesor, asignatura):\n",
     "        for a in self._asociados:\n",
     "            if a.DNI == profesor:\n",
     "                a.añadir_asignatura(asignatura)\n",
@@ -75,7 +150,18 @@
     "                return\n",
     "        print('Este DNI no corresponde a ningun profesor.')\n",
     "\n",
-    "    def listar_asignaturas(self, profesor):\n",
+    "    def eliminar_asignatura_impartida(self, profesor, asignatura):\n",
+    "        for a in self._asociados:\n",
+    "            if a.DNI == profesor:\n",
+    "                a.eliminar_asignatura(asignatura)\n",
+    "                return\n",
+    "        for t in self._titulares:\n",
+    "            if t.DNI == profesor:\n",
+    "                t.eliminar_asignatura(asignatura)\n",
+    "                return\n",
+    "        print('Este DNI no corresponde a ningun profesor.')\n",
+    "\n",
+    "    def listar_asignaturas_impartidas(self, profesor):\n",
     "        for a in self._asociados:\n",
     "            if a.DNI == profesor:\n",
     "                a.listar_asignaturas()\n",
@@ -85,7 +171,7 @@
     "                t.listar_asignaturas()\n",
     "                return\n",
     "        print('Este DNI no corresponde a ningun profesor.')      \n",
-    "\n",
+    "### DEPARTAMENTO\n",
     "    def cambiar_dpt(self, DNI, dpt_nuevo):\n",
     "        for a in self._asociados:\n",
     "            if a.DNI == DNI:\n",
@@ -105,26 +191,28 @@
     "                return\n",
     "        print('Esta persona no esta dada de alta en la universidad.')\n",
     "\n",
-    "\n",
-    "\n",
-    "\n",
     "class Persona():\n",
     "    def __init__(self, nombre, DNI, direccion, sexo: Sexo):\n",
+    "        if not nombre.isalpha():\n",
+    "            raise ValueError('El nombre solo puede contener letras\"')\n",
     "        self.nombre = nombre\n",
+    "        if len(DNI) != 9:\n",
+    "            raise ValueError(\"El DNI debe tener 9 caracteres\")\n",
     "        self.DNI = DNI\n",
     "        self.direccion = direccion\n",
+    "        if not isinstance(sexo, Sexo):\n",
+    "            raise ValueError('El sexo debe de ser una instancia de la enumeración Sexo.')\n",
     "        self.sexo = sexo.value\n",
     "\n",
     "class Miembro_dpt(Persona):\n",
-    "\n",
     "    def __init__(self, nombre, DNI, direccion, sexo, departamento: Departamento):\n",
     "        super().__init__(nombre, DNI, direccion, sexo)\n",
+    "        if not isinstance(departamento, Departamento):\n",
+    "            raise ValueError('El departamento debe ser una instancia de la enumeracion Departamento.')\n",
     "        self.departamento = departamento\n",
     "\n",
     "    def cambiar_dpt(self, dpt_nuevo):\n",
     "        self.departamento = dpt_nuevo\n",
-    "\n",
-    "        \n",
     "\n",
     "class Estudiante(Persona):\n",
     "    def __init__(self, nombre, DNI, direccion, sexo):\n",
@@ -134,8 +222,25 @@
     "    def devolver_datos(self):\n",
     "        return (f'Nombre: {self.nombre} DNI: {self.DNI} Dirección: {self.direccion} Sexo: {Sexo(self.sexo)}')\n",
     "    \n",
-    "class Profesor(Miembro_dpt):\n",
+    "    def añadir_asignatura(self, asignatura):\n",
+    "        for a in self._asignaturas_matriculadas:\n",
+    "            if a == asignatura:\n",
+    "                print('Este alumno ya esta matriculado en esta asignatura.')\n",
+    "                return\n",
+    "        self._asignaturas_matriculadas.append(asignatura)\n",
     "\n",
+    "    def listar_asignaturas(self):\n",
+    "        print('LISTADO ASIGNATURAS')\n",
+    "        for a in self._asignaturas_matriculadas:\n",
+    "            print('\\t', a)\n",
+    "    \n",
+    "    def eliminar_asignatura(self, asignatura):\n",
+    "        try:\n",
+    "            self._asignaturas_matriculadas.remove(asignatura)\n",
+    "        except:\n",
+    "            raise Exception('Este estudiante no esta matriculado de esta asignatura.')\n",
+    "        \n",
+    "class Profesor(Miembro_dpt):\n",
     "    def __init__(self,  nombre, DNI, direccion, sexo, departamento):\n",
     "        super().__init__(nombre, DNI, direccion, sexo, departamento)\n",
     "        self._asignaturas_impartidas = []\n",
@@ -152,26 +257,36 @@
     "        for a in self._asignaturas_impartidas:\n",
     "            print('\\t', a)\n",
     "\n",
+    "    def eliminar_asignatura(self, asignatura):\n",
+    "        try:\n",
+    "            self._asignaturas_impartidas.remove(asignatura)\n",
+    "        except:\n",
+    "            raise Exception('Este profesor no imparte esta asignatura.')\n",
+    "        \n",
+    "    def devolver_datos(self):\n",
+    "        return (f'Nombre: {self.nombre} DNI: {self.DNI} Dirección: {self.direccion} Sexo: {Sexo(self.sexo)}, Departamento: {self.departamento}')\n",
+    "\n",
+    "class Investigador(Miembro_dpt):\n",
+    "    def __init__(self, nombre, DNI, direccion, sexo, departamento, area_investigacion):\n",
+    "        super().__init__(nombre, DNI, direccion, sexo, departamento)\n",
+    "        self.area_investigacion = area_investigacion    \n",
+    "\n",
+    "    def devolver_datos(self):\n",
+    "        return (f'Nombre: {self.nombre} DNI: {self.DNI} Dirección: {self.direccion} Sexo: {Sexo(self.sexo)} Departamento: {self.departamento} Área investigación: {self.area_investigacion} ')\n",
     "\n",
     "class Profesor_asociado(Profesor):\n",
-    "\n",
     "    def __init__(self, nombre, DNI, direccion, sexo, departamento):\n",
     "        super().__init__(nombre, DNI, direccion, sexo, departamento)\n",
     "\n",
-    "class Investigador(Miembro_dpt):\n",
-    "    def __init__(self, nombre, DNI, direccion, sexo, departamento: Departamento, area_investigacion):\n",
-    "        super().__init__(nombre, DNI, direccion, sexo, departamento)\n",
-    "        self.area_investigacion = area_investigacion\n",
-    "\n",
     "class Profesor_titular(Investigador, Profesor):\n",
-    "    \n",
-    "    def __init__(self, nombre, DNI, direccion, sexo, departamento: Departamento, area_investigacion):\n",
-    "        Investigador().__init__(nombre, DNI, direccion, sexo, departamento, area_investigacion)\n"
+    "    def __init__(self, nombre, DNI, direccion, sexo, departamento, area_investigacion):\n",
+    "        Investigador.__init__(self, nombre, DNI, direccion, sexo, departamento, area_investigacion)\n",
+    "        Profesor.__init__(self, nombre, DNI, direccion, sexo, departamento)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,11 +295,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
-    "u.añadir_estudiante('Gustavo', 488, 'federico',  Sexo.MASCULINO)"
+    "u.añadir_estudiante('Gustavo', '48851691J', 'federico',  Sexo.MASCULINO)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "u.añadir_estudiante('Victoria', 49170972, 'federico',  Sexo.FEMENINO)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "u.añadir_profesor_asociado('Gustavo', '37492065H','federico',  Sexo.MASCULINO, Departamento.DIIC)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "u.añadir_profesor_titular('Agustín', '23198457P', 'federico', Sexo.MASCULINO, Departamento.DIIC, 'Ciberseguridad')"
    ]
   },
   {
@@ -193,30 +335,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "u.añadir_estudiante('Gustavo', 48851, 'federico',  Sexo.MASCULINO)"
+    "u.añadir_asignatura_impartida(488, 'Mat')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "u.añadir_profesor_asociado('Gustavo', 488,'federico',  Sexo.MASCULINO, Departamento.DIIC)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "u.añadir_asignatura(488, 'Mat')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -224,18 +348,17 @@
      "output_type": "stream",
      "text": [
       "LISTADO ASIGNATURAS\n",
-      "\t Mates\n",
       "\t Mat\n"
      ]
     }
    ],
    "source": [
-    "u.listar_asignaturas(488)"
+    "u.listar_asignaturas_impartidas(488)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -247,12 +370,12 @@
     }
    ],
    "source": [
-    "u.eliminar_estudiante(488)"
+    "u.eliminar_estudiante('48851691J')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -265,6 +388,43 @@
    ],
    "source": [
     "u.listar_estudiantes()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El departamento ha sido cambiado.\n"
+     ]
+    }
+   ],
+   "source": [
+    "u.cambiar_dpt(488, Departamento.DIS)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LISTADO ASOCIADOS\n",
+      "LISTADO TITULARES\n",
+      "\t Nombre: Agustín DNI: 23198457P Dirección: federico Sexo: Sexo.MASCULINO Departamento: Departamento.DIIC Área investigación: Ciberseguridad \n"
+     ]
+    }
+   ],
+   "source": [
+    "u.listar_asociados()\n",
+    "u.listar_titulares()"
    ]
   },
   {
